<resources>
    <string name="app_name">康达美</string>
    <string name="hello_world">Hello world!</string>
    <string name="rbt_day">每天</string>
    <string name="rbt_week">每周</string>
    <string name="rbt_month">每月</string>
    <string name="rbt_year">每年</string>
    <string name="shouye">心电图智能手表</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yonghumingce">用户名称</string>
    <string name="yibiaopan">仪表盘</string>
    <string name="celiang">测量</string>
    <string name="jaitingchengyuan">家庭成员</string>
    <string name="shebeiliebiao">设备列表</string>
    <string name="yishengziliao">医生资料</string>
    <string name="shezhi">设置</string>
    <string name="title_activity_ce_liang">CeLiangActivity</string>
    <string name="fanke">访客模式</string>
    <string name="xuanzechengyuan">选择成员</string>
    <string name="querenkaiqi">确认开启</string>
    <string name="dialog">此次测量数据将不被保存</string>
    <string name="fo">否</string>
    <string name="shi">是</string>
    <string name="title_activity_cheng_yuan">ChengYuanActivity</string>
    <string name="chengyuanbiaoti">心电图智能手表</string>
    <string name="jiatingliebiao">家庭列表</string>
    <string name="title">心电图智能手表</string>
    <string name="xinzengchengyuan">新增成员</string>
    <string name="shouyetitle">心电图智能手表</string>
    <string name="nichen">Cloudemist</string>
    <string name="zhuxiaodenglv">注销登录</string>
    <string name="yisheng">医生资料</string>
    <string name="yishengliebiao">医生列表</string>
    <string name="xinzengyisheng">新增医生</string>
    <string name="title_activity_she_bei">SheBeiActivity</string>
    <string name="shebei">设备列表</string>
    <string name="shebeiname">智能心电图手表</string>
    <string name="jiance">可检测:</string>
    <string name="jiance1">－单导联心电图</string>
    <string name="jiance2">－三导联心电图</string>
    <string name="anzhuang">安装新设备</string>
    <string name="title_activity_sz">SZActivity</string>
    <string name="shezhititle">设置</string>
    <string name="yue">12</string>
    <string name="ri">25</string>
    <string name="wendu">多云 17°~21°</string>
    <string name="xiugaimima">修改注册密码</string>
    <string name="jianhu">我监护的人</string>
    <string name="danwei">单位切换</string>
    <string name="yuyan">语言切换</string>
    <string name="guanyu">关于我们</string>
    <string name="title_activity_dl">DLActivity</string>
    <string name="etyonghumi">请输入账号</string>
    <string name="denglv">登录</string>
    <string name="xueyaji">血压计</string>
    <string name="xueya">－血压</string>
    <string name="tiwenji">体温计</string>
    <string name="tiwen">－体温</string>
    <string name="tizhongji">体重计</string>
    <string name="tizhong">－体重</string>
    <string name="zhifang">－脂肪</string>
    <string name="intro_page_1">intro page 1</string>
    <string name="intro_page_2">intro page 2</string>
    <string name="intro_page_3">intro page 3</string>
    <string name="intro_page_4">intro page 4</string>
    <string name="enterMainButtonText">开始体验</string>
    <string name="about_title">关于你好健康</string>
    <string name="about_copyright">©2015 奥又美 All Rights Reserved.</string>
    <string name="about_version">(版本号)</string>
    <string name="check_version">检查新版本</string>
    <string name="oum_logo">LOGO</string>
    <string name="user_name">账号</string>
    <string name="user_pwd">密码</string>
    <string name="user_reset">重填</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_forget_pwd">忘记密码</string>
    <string name="user_login_note">己注册用户请点下方按钮。</string>
    <string name="user_register_note">还未注册？请点下方按钮开始注册。</string>
    <string name="register_label_type">注册类型</string>
    <string name="userTypePerson">个人</string>
    <string name="userTypeEnterPrise">企业</string>
    <string name="userBirthday">生日</string>
    <string name="userSexLabel">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="nick_name">昵称</string>
    <string name="body_high">身高</string>
    <string name="body_high_hint">身高，以米为单位。如1.70。</string>
    <string name="user_register_label">亲，点击5秒注册会员。</string>
    <string name="app_title">你好健康</string>
    <string name="action_settings">设置</string>
    <string name="button_arrow_back">返回</string>
    <string name="search_button">搜索</string>
    <string name="begin_date_label">开始时间</string>
    <string name="end_date_label">结束时间</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="reset">重置</string>
    <string name="settings">设置</string>
    <string name="quit">退出</string>
    <string name="button_save">保存</string>
    <string name="period_day">日</string>
    <string name="period_week">周</string>
    <string name="period_month">月</string>
    <string name="period_year">年</string>
    <string name="drawer_open">显示菜单</string>
    <string name="drawer_close">隐藏菜单</string>
    <string name="share_wx">发送给朋友</string>
    <string name="share_py">分享到朋友圈</string>
    <string name="title_alert">提示</string>
    <string name="positiveButtonText">确定</string>
    <string name="negativeButtonText">取消</string>
    <string name="imgHome_description">Home image</string>
    <string name="image_scan_description">image scan</string>
    <string name="push_msg_description">push msg</string>
    <string name="push_msg_tip_point_description">push msg tip point</string>
    <string name="home_button_description">Home Button</string>
    <string name="home_button_yd">运动监测</string>
    <string name="home_button_xy">血压监测</string>
    <string name="home_button_tz">体重监测</string>
    <string name="home_button_xt">血糖监测</string>
    <string name="home_button_tw">体温监测</string>
    <string name="home_button_cp">健康产品</string>
    <string name="home_button_wd">一键报警</string>
    <string name="home_button_jt">健康讲堂</string>
    <string name="home_button_ls">历史数据</string>
    <string name="home_button_fx">数据分享</string>
    <string name="home_button_jl">消息记录</string>
    <string name="home_button_jp">荣耀奖牌</string>
    <string name="home_button_sd">参数设定</string>
    <string name="home_button_lt">江湖排名</string>
    <string name="left_menu_description">Left Menu</string>
    <string name="left_menu_item_description">Left Menu Item</string>
    <string name="menu_user_avatar">用户头像</string>
    <string name="menu_user_name">用户名称</string>
    <string name="menu_item_sport">运动</string>
    <string name="menu_item_history">历史</string>
    <string name="menu_item_discover">发现</string>
    <string name="menu_item_location">我在这里</string>
    <string name="location_me_title">我在这里</string>
    <string name="gps_level_label">GPS信号：</string>
    <string name="gps_level_value">弱</string>
    <string name="menu_item_message">消息</string>
    <string name="menu_item_friends">好友</string>
    <string name="menu_item_circle">圈子</string>
    <string name="menu_item_about">关于</string>
    <string name="ylistview_header_hint_normal">下拉刷新</string>
    <string name="ylistview_header_hint_ready">松开刷新数据</string>
    <string name="ylistview_header_hint_loading">正在加载。。。</string>
    <string name="ylistview_header_last_time">上次更新时间：</string>
    <string name="ylistview_footer_hint_normal">查看更多</string>
    <string name="ylistview_footer_hint_ready">松开载入更多</string>
    <string name="title_paired_devices">己配对的设备</string>
    <string name="title_found_devices">可用设备</string>
    <string name="button_scan">扫描</string>
    <string name="button_pair">配对</string>
    <string name="button_dis_pair">解除绑定</string>
    <string name="button_sync">同步</string>
    <string name="bt_select_device">请选择配对设备</string>
    <string name="bt_none_found">未发现可配对设备</string>
    <string name="button_start">启动</string>
    <string name="button_stop">停止</string>
    <string name="button_send">发送</string>
    <string name="button_cancel">取消</string>
    <string name="button_connect">连接</string>
    <string name="button_finish">完成</string>
    <string name="button_pause">暂停</string>
    <string name="button_resume">继续</string>
    <string name="button_reset">重置</string>
    <string name="button_setting">设置</string>
    <string name="button_search">搜索</string>
    <string name="button_del">删除</string>
    <string name="label_not_pair">目前还未配对设备</string>
    <string name="label_not_found">未找到己配对设备</string>
    <string name="label_not_connect">目前还未连接设备</string>
    <string name="label_connected">设备己连接</string>
    <string name="label_paired">设备己配对</string>
    <string name="label_wait_data">正在等待获取数据</string>
    <string name="label_wait_order">准备就绪</string>
    <string name="label_cancel">己取消</string>
    <string name="label_stoped">己停止</string>
    <string name="label_device_name">设备</string>
    <string name="label_sync_progress">己完成 %1$s</string>
    <string name="xy_title">血压监测</string>
    <string name="xy_label">血压</string>
    <string name="xy_device_label">血压计</string>
    <string name="xy_zz">请坐下并保持安静，手心向上并对着心脏水平前方。</string>
    <string name="xy_measure_time">测量时间：</string>
    <string name="xy_measure_data_1">0</string>
    <string name="xy_measure_data_2">0</string>
    <string name="xy_measure_data_3">0</string>
    <string name="xy_measure_label_1">高压</string>
    <string name="xy_measure_label_2">低压</string>
    <string name="xy_measure_label_3">心率</string>
    <string name="xy_home_bar_jiance">监测</string>
    <string name="xy_home_bar_history">历史</string>
    <string name="xy_home_bar_faxian">发现</string>
    <string name="xy_home_bar_paimin">排名</string>
    <string name="xyHistoryTitle">血压历史数据</string>
    <string name="xyDiscoverTitle">好友数据</string>
    <string name="xyPaiminTitle">排名</string>
    <string name="xy_history_time">时间</string>
    <string name="xyMeasureResult">结论：未知。</string>
    <string name="xyTongji">统计图</string>
    <string name="xyDeviceListLabel">请选择您的血压计型号</string>
    <string name="xyDeviceUrion">KDM-BP80 血压计</string>
    <string name="plus_history_left">上一条</string>
    <string name="plus_history_right">下一条</string>
    <string name="arrow_sub_left">sub</string>
    <string name="arrow_add_right">add</string>
    <string name="vertical_line">vertical line</string>
    <string name="horizontal_line">horizontal line</string>
    <string name="yd_pj_title">配件运动</string>
    <string name="yd_pj_sync_title">配件运动-同步模式</string>
    <string name="yd_pj_real_title">配件运动-实时计步</string>
    <string name="yd_pj_sync_label">同步模式</string>
    <string name="yd_pj_real_label">实时计步</string>
    <string name="yd_pj_sync_button">读取并保存历史数据</string>
    <string name="yd_pj_label">计步器</string>
    <string name="yd_gps_title">GPS运动</string>
    <string name="yd_setting_title">运动设置</string>
    <string name="yd_switch">运动切换</string>
    <string name="yd_main">运动</string>
    <string name="yd_history">历史</string>
    <string name="yd_discover">发现</string>
    <string name="yd_paimin">排名</string>
    <string name="yd_paimin_firends_only">朋友圈排名</string>
    <string name="yd_paimin_all">全部排名</string>
    <string name="yd_pj_yd">今日运动</string>
    <string name="yd_pj_sm">今日睡眠</string>
    <string name="yd_pj_switch_label">显示数据</string>
    <string name="ydDeviceListLabel">请选择您的计步器型号</string>
    <string name="ydDeviceAp">AP1708</string>
    <string name="ydDeviceAp2">AP2000</string>
    <string name="ydPJYdSum">0%</string>
    <string name="ydPJSmSum">--</string>
    <string name="ydHistoryTitle">运动历史数据</string>
    <string name="ydDiscoverTitle">好友数据</string>
    <string name="style_setting_title">手环设置</string>
    <string name="style_info_save">保存个人信息到手环</string>
    <string name="style_aim_save">保存运动目标到手环</string>
    <string name="style_syncTime_label">将手机当前时间设置到手环</string>
    <string name="style_syncTime">同步手环时间</string>
    <string name="tzHistoryTitle">体重历史数据</string>
    <string name="tz_history_time">测量时间</string>
    <string name="twTitle">体温监测</string>
    <string name="twValue">00.0</string>
    <string name="twNotice">将体温计对准测温目标，离测温目标不超过1厘米。</string>
    <string name="twMeasureTimeLabel">测温时间</string>
</resources>