<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- title -->

    <LinearLayout
        android:id="@+id/twMainTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height_dimen"
        android:background="@color/titleBar_bg_color"
        android:baselineAligned="false"
        android:gravity="center_vertical">
        <RelativeLayout
            android:id="@+id/rl_fanhui"
            android:layout_width="48dp"
            android:layout_height="48dp">
            <ImageView
                android:id="@+id/iv_celiang_fanhui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/fanhui_hei"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>


        <View
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twTitle"
                android:textColor="@color/titleBar_textColor_color"
                android:textSize="@dimen/titleBar_text_size_dimen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="enterTWSetting"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/titleButton_size_dimen"
                android:layout_height="@dimen/titleButton_size_dimen"
                android:contentDescription="@string/action_settings"
                android:src="@mipmap/setting" />
        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/twOperationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yd_pj_title"
            android:src="@mipmap/yd_peijian" />

        <TextView
            android:id="@+id/twPJName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_device_name" />

        <Button
            android:id="@+id/twPJOperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="twOperation"
            android:text="@string/button_start" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/twNotice"
        android:textColor="@color/normal_item_data_color"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/twValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twValue"
            android:textColor="@color/normal_value_color"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/twUnit"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@mipmap/cc" />
    </LinearLayout>

    <TextView
        android:id="@+id/twMeasureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/twMeasureTimeLabel"
        android:textColor="@color/normal_item_data_color"
        android:textSize="15sp" />
</LinearLayout>