<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/xyMainTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height_dimen"
        android:background="@color/titleBar_bg_color"
        android:gravity="center_vertical" >
        <RelativeLayout
            android:id="@+id/rl_fanhui"
            android:layout_width="48dp"
            android:layout_height="48dp">
            <ImageView
                android:id="@+id/iv_celiang_fanhui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/fanhui_hei"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <View
            android:layout_width="35dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xy_title"
                android:textColor="@color/titleBar_textColor_color"
                android:textSize="@dimen/titleBar_text_size_dimen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/titleButton_size_dimen"
                android:layout_height="@dimen/titleButton_size_dimen"
                android:contentDescription="@string/action_settings"
                android:onClick="enterXySetting"
                android:src="@mipmap/setting" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/normal_margin"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/xyStateContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/xy_label"
            android:src="@mipmap/xy_d" />

        <TextView
            android:id="@+id/xyStateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_not_pair"
            android:textSize="15sp" />

        <Button
            android:id="@+id/xyOperatorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="xyOperation"
            android:text="@string/button_pair" />
    </LinearLayout>

    <TextView
        android:id="@+id/xyZZLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/xy_zz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/xyZZImage"
            android:layout_width="255dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/xy_zz"
            android:scaleType="fitXY"
            android:src="@mipmap/xy_zz" />
        
        <ImageView
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/normal_margin"
            android:contentDescription="@string/xy_zz"
            android:scaleType="fitXY"
            android:src="@mipmap/xy_kd" />

        <ProgressBar
            android:id="@+id/xyProgressBar"
            style="@style/xyProgressBar"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:max="300" />
    </LinearLayout>

    <TextView
        android:id="@+id/xyMeasureTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/xy_measure_time"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/xyMeasureDataLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:baselineAligned="false"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xy_measure_label_1"
                android:textColor="@color/normal_label_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/xyMeasureData1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xy_measure_data_1"
                android:textColor="@color/normal_value_color"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/xyMeasureImage1"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:contentDescription="@string/xy_measure_label_1"
                android:src="@mipmap/normal" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="@string/vertical_line"
            android:src="@mipmap/home_vertical_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xy_measure_label_2"
                android:textColor="@color/normal_label_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/xyMeasureData2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xy_measure_data_2"
                android:textColor="@color/normal_value_color"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/xyMeasureImage2"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:contentDescription="@string/xy_measure_label_1"
                android:src="@mipmap/normal" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="@string/vertical_line"
            android:src="@mipmap/home_vertical_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xy_measure_label_3"
                android:textColor="@color/normal_label_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/xyMeasureData3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xy_measure_data_3"
                android:textColor="@color/normal_value_color"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/xyMeasureImage3"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:contentDescription="@string/xy_measure_label_1"
                android:src="@mipmap/normal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/xyMeasureResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/xyMeasureResult"
        android:textSize="12sp" />

</LinearLayout>